--- a/index.html
+++ b/index.html
@@ -103,7 +103,32 @@
 
 <footer>
   <div class="container">
-    <p>© 2025 Wisteria Trust · Independent Seller Verification Infrastructure</p>
+    <h3 class="footer-title">Connect with Wisteria Trust</h3>
+
+    <div class="social-buttons">
+
+      <a href="https://www.linkedin.com/in/wisteria-trust-9211133a1"
+         target="_blank"
+         class="social-btn linkedin">
+        LinkedIn
+      </a>
+
+      <a href="https://www.instagram.com/wisteriatrust"
+         target="_blank"
+         class="social-btn instagram">
+        Instagram
+      </a>
+
+      <a href="mailto:wisteriatrust.verify@gmail.com"
+         class="social-btn email">
+        Email Us
+      </a>
+
+    </div>
+
+    <p class="footer-copy">
+      © 2025 Wisteria Trust · Independent Seller Verification Infrastructure
+    </p>
   </div>
 </footer>
 
