--- a/index.html
+++ b/index.html
@@ -103,25 +103,38 @@
 
 <footer>
   <div class="container">
+
     <h3 class="footer-title">Connect with Wisteria Trust</h3>
 
-    <div class="social-buttons">
+    <div class="social-icons">
 
+      <!-- LinkedIn -->
       <a href="https://www.linkedin.com/in/wisteria-trust-9211133a1"
          target="_blank"
-         class="social-btn linkedin">
-        LinkedIn
+         class="icon-btn"
+         aria-label="LinkedIn">
+        <svg viewBox="0 0 24 24">
+          <path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM.5 8h4V24h-4V8zm7.5 0h3.8v2.2h.05c.53-1 1.83-2.2 3.77-2.2C19.4 8 22 10.1 22 14.4V24h-4v-8.4c0-2-.04-4.6-2.8-4.6-2.8 0-3.2 2.2-3.2 4.4V24h-4V8z"/>
+        </svg>
       </a>
 
+      <!-- Instagram -->
       <a href="https://www.instagram.com/wisteriatrust"
          target="_blank"
-         class="social-btn instagram">
-        Instagram
+         class="icon-btn"
+         aria-label="Instagram">
+        <svg viewBox="0 0 24 24">
+          <path d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm10 2c1.7 0 3 1.3 3 3v10c0 1.7-1.3 3-3 3H7c-1.7 0-3-1.3-3-3V7c0-1.7 1.3-3 3-3h10zm-5 3.2A4.8 4.8 0 1 0 16.8 12 4.8 4.8 0 0 0 12 7.2zm0 7.9A3.1 3.1 0 1 1 15.1 12 3.1 3.1 0 0 1 12 15.1zM17.5 6a1.1 1.1 0 1 0 0 2.2 1.1 1.1 0 0 0 0-2.2z"/>
+        </svg>
       </a>
 
+      <!-- Email -->
       <a href="mailto:wisteriatrust.verify@gmail.com"
-         class="social-btn email">
-        Email Us
+         class="icon-btn"
+         aria-label="Email">
+        <svg viewBox="0 0 24 24">
+          <path d="M2 4h20v16H2V4zm10 7L4 6v12h16V6l-8 5z"/>
+        </svg>
       </a>
 
     </div>
@@ -129,9 +142,11 @@
     <p class="footer-copy">
       © 2025 Wisteria Trust · Independent Seller Verification Infrastructure
     </p>
+
   </div>
 </footer>
 
 <script src="assets/js/main.js"></script>
 </body>
 </html>
+
