--- a/index.html
+++ b/index.html
@@ -47,10 +47,13 @@
     <a href="#verify" class="hero-btn">Enter Verification Portal</a>
 
     <!-- ✅ IMPORTANT NOTICE ADDED -->
-    <p class="dev-notice">
-      Verification infrastructure under development.<br>
-      No verifications are issued until backend is live.
-    </p>
+<div class="dev-notice">
+       <strong>Verification Infrastructure Under Development</strong>
+      <p>
+            Wisteria Trust is currently finalizing its verification systems.
+            No seller verifications are issued until the backend infrastructure is fully live.
+      </p>
+    </div>
 
     <div class="hero-badge">
       Wisteria Verified™ — Identity & Legitimacy Rigorously Assessed
@@ -149,4 +152,5 @@
 <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
