--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="icon" type="image/png" href="assets/images/favicon.png">
 </head>
 <body>
 
 <nav class="navbar">
   <div class="container nav-inner">
-    <div class="brand">Wisteria Trust</div>
-
+<div class="brand">
+  <img src="assets/images/logo.png" alt="Wisteria Trust Logo">
+  <span>Wisteria Trust</span>
+</div>
     <div class="nav-links">
       <a href="#how">Process</a>
       <a href="#verify">Verification</a>
@@ -152,5 +155,6 @@
 <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
