--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -57,6 +57,20 @@
     <button onclick="logout()">Logout</button>
   </div>
 
+  <h3>All Verifications</h3>
+<table border="1" width="100%" cellpadding="8">
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Seller</th>
+      <th>Status</th>
+      <th>Expiry</th>
+    </tr>
+  </thead>
+  <tbody id="list"></tbody>
+</table>
+
+
   <script src="admin.js"></script>
 </body>
 </html>
