--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="icon" type="image/png" href="assets/images/favicon.png">
+  <link rel="icon" type="image/png" href="assets/images/favicon.png">
   <title>Wisteria Trust — Premium Seller Verification Infrastructure</title>
 
   <!-- Fonts -->
@@ -11,15 +11,19 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="assets/css/style.css" />
+  
+
 </head>
 <body>
 
 <nav class="navbar">
   <div class="container nav-inner">
-<div class="brand">
-  <img src="assets/images/logo.png" alt="Wisteria Trust Logo">
-  <span>Wisteria Trust</span>
-</div>
+    <div class="brand">
+      <img src="assets/images/logo.png" alt="Wisteria Trust Logo">
+      <span>Wisteria Trust</span>
+    </div>
+
+
     <div class="nav-links">
       <a href="#how">Process</a>
       <a href="#verify">Verification</a>
@@ -50,13 +54,14 @@
     <a href="#verify" class="hero-btn">Enter Verification Portal</a>
 
     <!-- ✅ IMPORTANT NOTICE ADDED -->
-<div class="dev-notice">
+    <div class="dev-notice">
        <strong>Verification Infrastructure Under Development</strong>
       <p>
             Wisteria Trust is currently finalizing its verification systems.
             No seller verifications are issued until the backend infrastructure is fully live.
       </p>
     </div>
+
 
     <div class="hero-badge">
       Wisteria Verified™ — Identity & Legitimacy Rigorously Assessed
@@ -105,6 +110,14 @@
       We are not a marketplace and do not process payments.
     </p>
   </div>
+</section>
+<section class="seller-cta">
+  <h2>Are You a Seller?</h2>
+  <p>
+    Get verified with Wisteria Trust and show your customers
+    a real-time authenticity badge on your website.
+  </p>
+  <a href="seller.html" class="cta-btn">Get Verified</a>
 </section>
 
 <footer>
@@ -155,7 +168,3 @@
 <script src="assets/js/main.js"></script>
 </body>
 </html>
-
-
-
-
