--- a/seller/index.html
+++ b/seller/index.html
@@ -15,7 +15,7 @@
     .container {
       max-width: 600px;
       margin: auto;
-      background: #fff;
+      background: #ffffff;
       padding: 30px;
       border-radius: 8px;
       box-shadow: 0 10px 30px rgba(0,0,0,0.08);
@@ -24,8 +24,10 @@
       margin-top: 0;
       font-size: 22px;
     }
+    .row {
+      margin-bottom: 10px;
+    }
     .status {
-      margin: 15px 0;
       font-weight: bold;
     }
     .ACTIVE { color: green; }
@@ -47,6 +49,7 @@
     </div>
   </div>
 
+  <!-- Seller JS -->
   <script src="seller.js"></script>
 </body>
 </html>
