--- a/seller/index.html
+++ b/seller/index.html
@@ -20,7 +20,7 @@
             </header>
                 <!-- INFO -->
                 <section class="box info">
-                    <h2>ℹ️ Your Verification Details</h2>
+                    <h2>Your Verification Details</h2>
                     <div><span>Verification ID</span><strong id="vid">—</strong></div>
                     <div><span>Seller Name</span><strong id="sellerName">—</strong></div>
                     <div><span>Business</span><strong id="businessName">—</strong></div>
@@ -29,7 +29,7 @@
                 </section>
             <!-- SECTION 1 -->
             <section class="box">
-                <h2>🔗 For Social Media / Bio</h2>
+                <h2>For Social Media / Bio</h2>
                 <p>
                 Use this link in your Instagram bio, WhatsApp profile, Google Business,
                 or anywhere online.
@@ -44,7 +44,7 @@
 
             <!-- SECTION 2 -->
             <section class="box">
-                <h2>🖥️ For Your Website (Footer / About Page)</h2>
+                <h2>For Your Website (Footer / About Page)</h2>
                 <p>
                 Place the following code on your website.
                 <br>
@@ -58,7 +58,7 @@
 
             <!-- SECTION 3 -->
             <section class="box">
-                <h2>🖼️ Verified Seller Badge</h2>
+                <h2>Verified Seller Badge</h2>
                 <p>
                 Download the official Wisteria Trust Verified Seller badge and
                 upload it to your website footer or marketing materials.
@@ -72,9 +72,8 @@
             <footer>
                 © Wisteria Trust — Official Seller Verification System
             </footer>
-            
+
         </div>
        <script src="seller.js"></script>
     </body>
 </html>
-
