--- a/seller/index.html
+++ b/seller/index.html
@@ -12,7 +12,8 @@
         <div class="container">
 
             <header>
-                <h1>Seller Verification Kit</h1>
+                <h1>VERIFIED WISTERIA SELLER </h1>
+                <h2>Seller Verification Kit</h2>
                 <p class="subtitle">
                 Use the tools below to show buyers that you are officially verified by
                 <strong>Wisteria Trust</strong>.
